# dueca

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  ChangeLog.md  ChangeLog.old  README.md  atomic_test.cxx  dassert.h.in  debprint.h.in  dueca-confcm.h.in  gencodegen.h.in  linuxtest.script  linuxtmp.script  oddoptions.h.in  osxtmp.script  sourcepath_test.cxx  undebprint.h
ddff/: AQMTMessageBufferAlloc.hxx  CMakeLists.txt  ControlBlock.cxx  ControlBlock.hxx  DDFFDCOMetaFunctor.cxx  DDFFDCOMetaFunctor.hxx  DDFFDCOReadFunctor.cxx  DDFFDCOReadFunctor.hxx  DDFFDCOWriteFunctor.cxx  DDFFDCOWriteFunctor.hxx  DDFFDataRecorder.cxx  DDFFDataRecorder.hxx  DDFFExceptions.cxx  DDFFExceptions.hxx  DDFFMessageBuffer.cxx  DDFFMessageBuffer.hxx  FileHandler.cxx  FileHandler.hxx  FileStreamRead.cxx  FileStreamRead.hxx  FileStreamWrite.cxx  FileStreamWrite.hxx  FileWithInventory.cxx  FileWithInventory.hxx  FileWithSegments.cxx  FileWithSegments.hxx  IndexMark.dco  IndexPoint.dco  SegmentedRecorderBase.cxx  SegmentedRecorderBase.hxx  ddff_ns.h  dueca-ddff.pc.in
ddfflog/: CMakeLists.txt  DDFFLogger.cxx  DDFFLogger.hxx  EntryWatcher.cxx  EntryWatcher.hxx  InitDDFFLog.cxx  dueca-ddfflog-ln.pc.in  dueca-ddfflog.pc.in
doc/: CMakeLists.txt  api.oxy.in  app_development.doc  appdevelopment.doc  appdevelopmentg.md  asyncqueuedesign.xoj  bugs.doc  channeldesign.md  channelpatterns.md  cmake_hints.md  codegenerator.doc  codegenerator.md  configuration-ref.doc  configuration.doc  configurationpy.doc  default-modules.doc  dependencies.tex  dueca-2.doc  dusime.doc  example.doc  exe_make.doc  executable.doc  extra.doc  extra.md  faq.doc  flyer.tex  gladeinterfaces.doc  grt_malloc_main-rtw3.c  grt_malloc_main-rtw4.c  grt_malloc_main-rtw61.c  grt_malloc_main-rtw64.c  gtk4interface.md  gui.md  hdf5logging.doc  header-api.tex.in  header-inspec.tex.in  inspec.oxy  interconnect.doc  json.doc  keyconcept.doc  (+36 more)
dueca/: Accessor.cxx  Accessor.hxx  Activity.cxx  Activity.hxx  ActivityBit.cxx  ActivityBit.hxx  ActivityContext.cxx  ActivityContext.hxx  ActivityDescription.cxx  ActivityDescription.dco  ActivityDescriptions.cxx  ActivityDescriptions.hxx  ActivityLister.cxx  ActivityLister.hxx  ActivityLog.dco  ActivityLogExtra.cxx  ActivityLogExtra.hxx  ActivityLogRequest.dco  ActivityManager.cxx  ActivityManager.hxx  ActivityViewBase.cxx  ActivityViewBase.hxx  ActivityWeaver.cxx  ActivityWeaver.hxx  AmorphStore.cxx  AmorphStore.hxx  AperiodicAlarm.cxx  AperiodicAlarm.hxx  Arena.cxx  Arena.hxx  ArenaPool.cxx  ArenaPool.hxx  ArgElement.cxx  ArgElement.hxx  ArgListProcessor.cxx  ArgListProcessor.hxx  AssociateObject.hxx  AsyncList.cxx  AsyncList.hxx  AsyncQueueMT.hxx  (+462 more)
dusime/: CMakeLists.txt  DUSIMEExceptions.cxx  DUSIMEExceptions.hxx  DataRecorder.hxx  DusimeController.cxx  DusimeController.hxx  DusimeModule.cxx  DusimeModule.hxx  HardwareModule.cxx  HardwareModule.hxx  HardwareState.cxx  HardwareState.hxx  IcalcTest.cxx  IcalcTest.hxx  IncoCalculator.cxx  IncoCalculator.hxx  IncoCollaborator.cxx  IncoCollaborator.hxx  IncoMode.cxx  IncoMode.dco  IncoMode.hxx  IncoNotice.dco  IncoNoticeExtra.cxx  IncoNoticeExtra.hxx  IncoRole.cxx  IncoRole.hxx  IncoSpec.dco  IncoSpecExtra.cxx  IncoSpecExtra.hxx  IncoTable.hxx  IncoVarType.cxx  IncoVarType.dco  IncoVarType.hxx  IncoVariable.dco  IncoVariableExtra.cxx  IncoVariableExtra.hxx  IncoVariableWork.cxx  IncoVariableWork.hxx  IndexValuePair.dco  InitDusime.cxx  (+38 more)
extra/: AxisTransforms.cxx  AxisTransforms.hxx  CMakeLists.txt  Circular.cxx  Circular.hxx  CircularWithPoly.cxx  CircularWithPoly.hxx  ConglomerateFactory.hxx  DuecaGLCanvas.cxx  DuecaGLCanvas.hxx  DuecaGLWindow.cxx  DuecaGLWindow.hxx  FindFiles.cxx  FindFiles.hxx  GLSweeper.cxx  GLSweeper.hxx  IdentityFunction.hxx  InitExtra.cxx  InputCalibrator.hxx  InputRatioCalibrator.hxx  Integrator.cxx  Integrator.hxx  InterpIndex.hxx  InterpTable1.hxx  InterpTable2.hxx  InterpTable3.hxx  InterpTable4.hxx  InterpTest.cxx  InterpTest.hxx  Interpolator1.hxx  Interpolator2.hxx  Interpolator3.hxx  Interpolator4.hxx  Inverse.cxx  Inverse.hxx  LimitedLinearSystem.cxx  LimitedLinearSystem.hxx  LinearSystem.cxx  LinearSystem.hxx  OpenGLHelper.cxx  (+27 more)
gitscripts/: CMakeLists.txt  dueca-cvs-to-git.py  dueca-gproject.py  dueca-list-modules.py  dueca-scheme-to-python.py  gittest.py  process-comm-objects.py
hdf5utils/: CMakeLists.txt  EntryWatcher.cxx  EntryWatcher.hxx  HDF5DCOMetaFunctor.cxx  HDF5DCOMetaFunctor.hxx  HDF5DCOReadFunctor.cxx  HDF5DCOReadFunctor.hxx  HDF5DCOWriteFunctor.cxx  HDF5DCOWriteFunctor.hxx  HDF5Exceptions.cxx  HDF5Exceptions.hxx  HDF5Logger.cxx  HDF5Logger.hxx  HDF5Replayer.cxx  HDF5Replayer.hxx  HDF5Templates.cxx  HDF5Templates.hxx  HDFLogConfig.dco  HDFLogConfig.hxx  HDFLogStatus.dco  HDFLogStatus.hxx  HDFReplayConfig.dco  HdfLogNamespace.hxx  InitHdf5.cxx  dueca-hdf-ln.pc.in  dueca-hdf.pc.in
inter/: CMakeLists.txt  ChannelReplicator.cxx  ChannelReplicator.hxx  ChannelReplicatorMaster.cxx  ChannelReplicatorMaster.hxx  ChannelReplicatorPeer.cxx  ChannelReplicatorPeer.hxx  EntryHandler.cxx  EntryHandler.hxx  EntryReader.cxx  EntryReader.hxx  EntryWatcher.cxx  EntryWatcher.hxx  EntryWriter.cxx  EntryWriter.hxx  InitInter.cxx  PeerTiming.cxx  PeerTiming.hxx  ReplicatorConfig.dco  ReplicatorConfigExtra.cxx  ReplicatorConfigExtra.hxx  ReplicatorExceptions.cxx  ReplicatorExceptions.hxx  ReplicatorInfo.dco  ReplicatorNamespace.hxx  ReplicatorPeerAcknowledge.dco  ReplicatorPeerInfo.dco  ReplicatorPeerJoined.dco  dueca-inter-config.h.in  dueca-inter-ln.pc.in  dueca-inter.pc.in
pixmaps/: CMakeLists.txt  abort.xpm  active.xpm  confirm-abort.xpm  fell-back.xpm  inactive.xpm  incomplete.xpm  inprogress.xpm
pycodegen/: CMakeLists.txt  __init__.py  dco_template.c.jinja  dco_template.cxx  dco_template.h.jinja  dco_template.hxx  design.txt  dueca-codegen.py  enum_template.c.jinja  enum_template.h.jinja  enum_template.hxx  generation.py.in
rtwparser/: BaseObject.cxx  BaseObject.hxx  CMakeLists.txt  NamedStruct.cxx  NamedStruct.hxx  TypeNameDef.cxx  TypeNameDef.hxx  rtwgrammar.l  rtwparser.cxx  (+2 more)
(+807 files in other folders)
